fixed deprecated methods  (or temporarily suppressed warnings) and bumped JUnit version to 5